--- a/HostedPrincess/HostedPrincess/HostedPrincess.csproj
+++ b/HostedPrincess/HostedPrincess/HostedPrincess.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.9.1" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0-rc.1.22426.10" />
+      <PackageReference Include="Moq" Version="4.18.3" />
     </ItemGroup>
 
 </Project>
